<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Selection"
    android:background="@drawable/vector_pastel_abstract">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingLeft="90dp"
            android:paddingRight="90dp">

            <TextView
                android:id="@+id/wywtd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="none"
                android:fontFamily="@font/alegreya"
                android:shadowColor="#FFFFFF"
                android:text="@string/wywtd"
                android:textColor="#11091E"
                android:textSize="20sp" />

            <Button
                android:id="@+id/profile"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sprofile" />

            <Button
                android:id="@+id/meditate"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Meditate" />

            <Button
                android:id="@+id/update"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/supdate" />

            <Button
                android:id="@+id/history"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/shistory" />

            <Button
                android:id="@+id/stats"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sstats" />

            <Button
                android:id="@+id/sleep"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ssleep" />

            <Button
                android:id="@+id/water"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/swater" />

            <Button
                android:id="@+id/changepass"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/changepass" />

            <Button
                android:id="@+id/logout"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>