<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="@drawable/pngtree"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:fadingEdge="horizontal"
                android:fontFamily="@font/amiri"
                android:paddingLeft="100dp"
                android:text="@string/reg"
                android:textColor="#0B0A0A"
                android:textSize="42sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:autoLink="email"
                android:autoText="true"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword|textPassword"
                android:selectAllOnFocus="true"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/editTextNumberDecimal2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:layout_weight="1"
                    android:hint="@string/weightkg"
                    android:inputType="numberDecimal"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextNumberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:layout_weight="1"
                    android:hint="@string/heightcm"
                    android:inputType="numberDecimal"
                    android:scrollbars="horizontal"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/ageid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/ageyrs"
                android:inputType="number"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textColor="#1B1A1A"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/genid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:verticalScrollbarPosition="defaultPosition">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/fem" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/male" />

            </RadioGroup>

            <Button
                android:id="@+id/inforegister"
                style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="#B3F1EAEA"
                android:enabled="true"
                android:text="@string/reg" />

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>