<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sleepcons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackspiral"
    tools:context=".SleepActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="416dp"
        android:layout_height="127dp"
        android:background="#33A39393"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:text="@string/tracksleep"
        android:textAllCaps="false"
        android:textColor="#CCFFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="261dp"
        android:layout_height="172dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:srcCompat="@drawable/bwsleep" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:background="#ADFFFFFF"
        android:text="@string/plus"
        android:textColor="#100F0F"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sub"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:background="#ADFFFFFF"
        android:text="@string/minus"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/sleephours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="@font/amiri"
        android:hint="@string/plus"
        android:inputType="none"
        android:shadowColor="#FFFFFF"
        android:textColor="#CCFFFFFF"
        android:textSize="45sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_sub"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toEndOf="@+id/button_add"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="sans-serif-black"
        android:hint="@string/sleep"
        android:inputType="none"
        android:text="@string/hrs_sleep_recommended"
        android:textColor="#CCFFFFFF"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <ImageView
        android:id="@+id/tick"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:contentDescription="TODO"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726"
        app:srcCompat="@drawable/greentickclearbg" />


</androidx.constraintlayout.widget.ConstraintLayout>